--- a/import-products/docker-compose.yml
+++ b/import-products/docker-compose.yml
@@ -6,9 +6,6 @@ services:
     container_name: import-products-pgsql
     image: postgres:latest
     restart: always
-    shm_size: 128mb
-    env_file:
-      - ./.env
     environment:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
@@ -17,3 +14,38 @@ services:
       - ./database/pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+  nginx:
+    container_name: import-products-nginx
+    image: nginx:latest
+    ports:
+      - "8080:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./:/var/www/app
+    depends_on:
+      - app
+  app:
+    container_name: import-products-app
+    build:
+      context: ./docker
+      dockerfile: app.Dockerfile
+    volumes:
+      - ./:/var/www/app
+    depends_on:
+      - db
+
+  composer:
+    container_name: import-products-composer
+    build:
+      context: ./docker
+      dockerfile: composer.Dockerfile
+    volumes:
+      - ./:/var/www/app
+  artisan:
+    container_name: import-products-artisan
+    build:
+      context: ./docker
+      dockerfile: app.Dockerfile
+    volumes:
+      - ./:/var/www/app
+    entrypoint: ["php", "artisan"]
