--- a/news-api/docker-compose.yml
+++ b/news-api/docker-compose.yml
@@ -11,3 +11,15 @@ services:
       - ./database/pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+  app:
+    container_name: news-api-app
+    build:
+      context: .
+      dockerfile: docker/go.Dockerfile
+    env_file:
+      - .env
+    ports:
+      - "3000:3000"
+    depends_on: 
+      - db
+
