--- a/auth-service/.env.example
+++ b/auth-service/.env.example
@@ -3,3 +3,6 @@ POSTGRES_PASSWORD=test
 POSTGRES_DB=test
 POSTGRES_PORT=5432
 POSTGRES_HOST=db
+
+ACCESS_LIFE_TIME=300 # sec
+REFRESH_LIFE_TIME=3600 # sec
