--- a/auth-service/.env.example
+++ b/auth-service/.env.example
@@ -5,5 +5,6 @@ POSTGRES_PORT=5432
 POSTGRES_HOST=db
 
 ACCESS_LIFE_TIME=300 # sec
-ACCESS_KEY=test
+ACCESS_KEY=test_access_key
 REFRESH_LIFE_TIME=3600 # sec
+REFRESH_KEY=test_refresh_key
